# rl-flow

./: .gitignore  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: docs.yml
apps/web/: index.html  package.json
configs/: app.hpc.yaml  app.local.yaml
configs/clusters/: local.yaml  slurm.example.yaml
configs/sweeps/: 16x16_emptyroom_symbolic_cardinal__dqn.yaml  16x16_emptyroom_symbolic_cardinal__dqn_.yaml  16x16_emptyroom_symbolic_cardinal__dqn_rmax_cfn.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn__best.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_countbasedoracle.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_countbasedoracle__best.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_highreplay.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_rmax_cfn.yaml  16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_rmax_vanillacountbased.yaml  best__16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn.yaml  best__16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_countbasedoracle.yaml  best__16x16_emptyroom_symbolic_cardinal_cornerdistractor__dqn_highreplay.yaml  (+6 more)
docs/: architecture.md  builtin_components.md  component_authoring.md  index.md  roadmap.md  slurm.md  workflow_schema.md
scripts/: analyze_factorial_design.py  analyze_intrinsic_bonus_failures.py  generate_docs_reference.py  plot_sweep_discounted_return_comparison.py  plot_tabular_rmax_emptyroom_maps.py
(+129 files in other folders)
