[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-flow"
version = "0.1.0"
description = "Schema-driven node workflow framework for reinforcement learning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlmodel>=0.0.21",
  "jinja2>=3.1",
  "typer>=0.12",
  "pyyaml>=6.0",
  "jsonschema>=4.22",
  "jax>=0.4",
  "optax>=0.2",
  "navix>=0.7.4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "tabulate>=0.9",
]
analysis = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "tabulate>=0.9",
]
mlflow = ["mlflow>=2.12"]

[project.scripts]
rlflow = "rlflow.cli:app"

[tool.setuptools.packages.find]
where = [
  "packages/core",
  "packages/builtin_components",
  "apps/api",
]
include = ["rlflow*", "rlflow_builtin*", "rlflow_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/core",
  "packages/builtin_components",
  "apps/api",
]
